[build-system]
requires = ["setuptools>=61.0", "toml"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cros_releases"]
package-dir = {"" = "src"}

[project]
name = "chromeos-releases"
version = "1.0.0"
authors = [
  {name="ading2210"},
]
description = "An implementation of a Wisp proxy server in Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3",
  "Operating System :: OS Independent",
]
dependencies = [
  "httpx[http2]",
  "httpx[socks]",
  "httpx-retries",
  "dulwich"
]

[project.urls]
Homepage = "https://github.com/MercuryWorkshop/chromeos-releases"
Issues = "https://github.com/MercuryWorkshop/chromeos-releases/issues"